bug patrol - march holiday content, march observances content and eliminate one vertical scrollbar in dayview

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -715,7 +715,7 @@ a.btn:hover {
 
 #schedulePanel {
   height: 41em;
-  overflow: scroll;
+  overflow-y: hidden;
 
   margin-left: 0.1em;
   background-color: #eeeeee;
